--- a/printer-Ender3_skr_mini_e3_v2.cfg
+++ b/printer-Ender3_skr_mini_e3_v2.cfg
@@ -76,10 +76,10 @@ pid_Ki: 1.063
 pid_Kd: 108.982
 min_temp: 0
 max_temp: 275
-min_extrude_temp: 180
+min_extrude_temp: 170
 pressure_advance: 0.059
-max_extrude_only_accel: 5000
-max_extrude_only_velocity: 25
+max_extrude_only_accel: 3000
+max_extrude_only_velocity: 50
 
 [tmc2209 extruder]
 uart_pin: PC11
@@ -93,16 +93,14 @@ stealthchop_threshold: 999999
 heater_pin: PC9
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: PC3
-control: pid
-pid_Kp: 74.562
-pid_Ki: 1.497
-pid_Kd: 928.296
+control: watermark
 min_temp: 0
 max_temp: 130
 ## ------------------------------------------------------
 
-[heater_fan nozzle_cooling_fan]
+[controller_fan my_controller_fan]
 pin: PC7
+max_power: 0.6
 
 [fan]
 pin: PC6
@@ -116,6 +114,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_32FFD3055359393508741843-if00
 kinematics: cartesian
 max_velocity: 300
 max_accel: 3000
+max_accel_to_decel: 1500
 max_z_velocity: 5
 max_z_accel: 100
 square_corner_velocity: 3
@@ -295,7 +294,7 @@ control_pin: PA1
 #pin_up_touch_mode_reports_triggered: False
 x_offset: -35
 y_offset: -25
-z_offset: 0.60
+z_offset: 0.63
 speed: 10
 lift_speed: 20
 samples: 2
@@ -309,10 +308,11 @@ speed: 120
 horizontal_move_z: 5
 mesh_min: 10, 10
 mesh_max: 195, 180
-probe_count: 8, 8
+probe_count: 3, 3
 algorithm: bicubic
 # ----
 [input_shaper]
 shaper_freq_x: 29.62
 shaper_freq_Y: 34.78
-shaper_type: mzv
+shaper_type_x: mzv
+shaper_type_Y: ei
